# hyperever-task-1

./: CMakeLists.txt  README.md  Readme.md  mpc_data.csv  plot_results.py  run_simulation.sh
include/: CartPole.h  CartPoleSimulation.h  MPC.h  MainWindow.h
src/: CartPole.cpp  CartPoleSimulation.cpp  MPC.cpp  MainWindow.cpp  main.cpp
